--- a/zadanie3/Zadanie5.ipynb
+++ b/zadanie3/Zadanie5.ipynb
@@ -130,7 +130,7 @@
    "source": [
     "def initalize_translation_prob(corpus1, corpus2):\n",
     "    pairs = list(itertools.product(get_vocabulary(corpus2), get_vocabulary(corpus1)))\n",
-    "    translation_prob = {p: 1/len(get_vocabulary(corpus2)) for p in pairs}\n",
+    "    translation_prob = {p: 1/len(get_vocabulary(corpus1)) for p in pairs}\n",
     "    return translation_prob\n",
     "        \n",
     "translation_prob = initalize_translation_prob(english, spanish)"
@@ -151,15 +151,15 @@
     {
      "data": {
       "text/plain": [
-       "{('la', 'the'): 0.3333333333333333,\n",
-       " ('la', 'green'): 0.3333333333333333,\n",
-       " ('la', 'house'): 0.3333333333333333,\n",
-       " ('verde', 'the'): 0.3333333333333333,\n",
-       " ('verde', 'green'): 0.3333333333333333,\n",
+       "{('verde', 'the'): 0.3333333333333333,\n",
        " ('verde', 'house'): 0.3333333333333333,\n",
+       " ('verde', 'green'): 0.3333333333333333,\n",
        " ('casa', 'the'): 0.3333333333333333,\n",
+       " ('casa', 'house'): 0.3333333333333333,\n",
        " ('casa', 'green'): 0.3333333333333333,\n",
-       " ('casa', 'house'): 0.3333333333333333}"
+       " ('la', 'the'): 0.3333333333333333,\n",
+       " ('la', 'house'): 0.3333333333333333,\n",
+       " ('la', 'green'): 0.3333333333333333}"
       ]
      },
      "execution_count": 5,
@@ -210,8 +210,7 @@
     "        for p in translation_prob.keys():\n",
     "            if p in itertools.product(s1, s2):\n",
     "                df.loc[p[0], p[1]] = translation_prob[p]\n",
-    "        df = df/df.sum()\n",
-    "        dfs.append(df)\n",
+    "        dfs.append(df.divide(df.sum(axis=1), axis='index'))\n",
     "    return dfs\n",
     "\n",
     "assigment_expected_values = calculate_expectation(english, spanish, translation_prob)"
@@ -232,13 +231,13 @@
     {
      "data": {
       "text/plain": [
-       "[      green house\n",
+       "[      house green\n",
        " verde   0.5   0.5\n",
        " casa    0.5   0.5,       the house\n",
        " casa  0.5   0.5\n",
-       " la    0.5   0.5,             the     green     house\n",
-       " casa   0.333333  0.333333  0.333333\n",
+       " la    0.5   0.5,             the     house     green\n",
        " verde  0.333333  0.333333  0.333333\n",
+       " casa   0.333333  0.333333  0.333333\n",
        " la     0.333333  0.333333  0.333333]"
       ]
      },
@@ -278,7 +277,7 @@
    "source": [
     "def calculate_maximization(corpora1, corpora2, assigment_expected_values):\n",
     "    wrd_sum = {}\n",
-    "    pairs = {}\n",
+    "    pairs = {p: 0. for p in list(itertools.product(get_vocabulary(corpora2), get_vocabulary(corpora1)))}\n",
     "    for df in assigment_expected_values:\n",
     "        for wrd1 in list(df.index):\n",
     "            for wrd2 in df.columns:\n",
@@ -333,25 +332,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(('verde', 'house'), 0.22079772079772084), (('casa', 'house'), 0.5584045584045584), (('la', 'house'), 0.22079772079772084)]\n",
+      "[(('verde', 'house'), 0.255758538522637), (('casa', 'house'), 0.4884829229547261), (('la', 'house'), 0.255758538522637)]\n",
       "---\n",
-      "[(('verde', 'house'), 0.16805384111904528), (('casa', 'house'), 0.6638923177619094), (('la', 'house'), 0.16805384111904528)]\n",
+      "[(('verde', 'house'), 0.22714868265451849), (('casa', 'house'), 0.5457026346909631), (('la', 'house'), 0.22714868265451857)]\n",
       "---\n",
-      "[(('verde', 'house'), 0.12335156766127482), (('casa', 'house'), 0.7532968646774505), (('la', 'house'), 0.12335156766127482)]\n",
+      "[(('verde', 'house'), 0.19672005592924102), (('casa', 'house'), 0.6065598881415177), (('la', 'house'), 0.19672005592924108)]\n",
       "---\n",
-      "[(('verde', 'house'), 0.08801990153205524), (('casa', 'house'), 0.8239601969358894), (('la', 'house'), 0.08801990153205524)]\n",
+      "[(('verde', 'house'), 0.16712845727039535), (('casa', 'house'), 0.6657430854592092), (('la', 'house'), 0.1671284572703954)]\n",
       "---\n",
-      "[(('verde', 'house'), 0.061511685865775545), (('casa', 'house'), 0.8769766282684488), (('la', 'house'), 0.061511685865775545)]\n",
+      "[(('verde', 'house'), 0.13977106345529594), (('casa', 'house'), 0.720457873089408), (('la', 'house'), 0.139771063455296)]\n",
       "---\n",
-      "[(('verde', 'house'), 0.042351684951809056), (('casa', 'house'), 0.9152966300963818), (('la', 'house'), 0.042351684951809056)]\n",
+      "[(('verde', 'house'), 0.11531161570110424), (('casa', 'house'), 0.7693767685977914), (('la', 'house'), 0.1153116157011043)]\n",
       "---\n",
-      "[(('verde', 'house'), 0.02885878646072998), (('casa', 'house'), 0.94228242707854), (('la', 'house'), 0.02885878646072998)]\n",
+      "[(('verde', 'house'), 0.09397642135892788), (('casa', 'house'), 0.8120471572821443), (('la', 'house'), 0.09397642135892793)]\n",
       "---\n",
-      "[(('verde', 'house'), 0.019525050381416956), (('casa', 'house'), 0.960949899237166), (('la', 'house'), 0.019525050381416956)]\n",
+      "[(('verde', 'house'), 0.07572928724243873), (('casa', 'house'), 0.8485414255151223), (('la', 'house'), 0.07572928724243877)]\n",
       "---\n",
-      "[(('verde', 'house'), 0.01314630669060939), (('casa', 'house'), 0.9737073866187812), (('la', 'house'), 0.01314630669060939)]\n",
+      "[(('verde', 'house'), 0.06038066797558056), (('casa', 'house'), 0.879238664048839), (('la', 'house'), 0.06038066797558059)]\n",
       "---\n",
-      "[(('verde', 'house'), 0.008822580347590375), (('casa', 'house'), 0.9823548393048194), (('la', 'house'), 0.008822580347590375)]\n",
+      "[(('verde', 'house'), 0.04765810586057428), (('casa', 'house'), 0.9046837882788514), (('la', 'house'), 0.0476581058605743)]\n",
       "---\n"
      ]
     }
@@ -436,14 +435,18 @@
     {
      "data": {
       "text/plain": [
-       "{('pies', 'the'): 0.3333333333333333,\n",
+       "{('dom', 'the'): 0.9112569006396293,\n",
+       " ('dom', 'dog'): 0.0,\n",
+       " ('dom', 'house'): 0.9543496877530574,\n",
+       " ('dom', 'green'): 0.009630459137615495,\n",
+       " ('zielony', 'the'): 0.043589014158240263,\n",
+       " ('zielony', 'dog'): 0.0,\n",
+       " ('zielony', 'house'): 0.04565031224694257,\n",
+       " ('zielony', 'green'): 0.9903695408623845,\n",
+       " ('pies', 'the'): 0.04515408520213061,\n",
        " ('pies', 'dog'): 1.0,\n",
-       " ('dom', 'the'): 0.6663411458333334,\n",
-       " ('dom', 'house'): 0.99951171875,\n",
-       " ('dom', 'green'): 0.5,\n",
-       " ('zielony', 'the'): 0.0003255208333333333,\n",
-       " ('zielony', 'green'): 0.5,\n",
-       " ('zielony', 'house'): 0.00048828125}"
+       " ('pies', 'house'): 0.0,\n",
+       " ('pies', 'green'): 0.0}"
       ]
      },
      "execution_count": 13,
@@ -494,18 +497,22 @@
     {
      "data": {
       "text/plain": [
-       "{('pies', 'the'): 3.5095620537396894e-05,\n",
-       " ('pies', 'dog'): 0.5,\n",
-       " ('null', 'the'): 0.9884935162981091,\n",
-       " ('null', 'dog'): 0.5,\n",
-       " ('dom', 'the'): 0.01146338484277804,\n",
-       " ('dom', 'house'): 0.49983723958333337,\n",
-       " ('null', 'house'): 0.49983723958333337,\n",
-       " ('zielony', 'the'): 8.00323857550188e-06,\n",
-       " ('zielony', 'green'): 0.3333333333333333,\n",
-       " ('zielony', 'house'): 0.00032552083333333337,\n",
-       " ('dom', 'green'): 0.3333333333333333,\n",
-       " ('null', 'green'): 0.3333333333333333}"
+       "{('null', 'the'): 0.9370242904733791,\n",
+       " ('null', 'dog'): 0.0994042716082298,\n",
+       " ('null', 'house'): 0.15423765076184243,\n",
+       " ('null', 'green'): 0.02316048577836201,\n",
+       " ('zielony', 'the'): 0.00019739792108716342,\n",
+       " ('zielony', 'dog'): 0.0,\n",
+       " ('zielony', 'house'): 0.0026628660574290162,\n",
+       " ('zielony', 'green'): 0.8932057647751056,\n",
+       " ('dom', 'the'): 0.06249885711871717,\n",
+       " ('dom', 'dog'): 0.0,\n",
+       " ('dom', 'house'): 0.8430994831807286,\n",
+       " ('dom', 'green'): 0.08363374944653247,\n",
+       " ('pies', 'the'): 0.00027945448681638316,\n",
+       " ('pies', 'dog'): 0.9005957283917702,\n",
+       " ('pies', 'house'): 0.0,\n",
+       " ('pies', 'green'): 0.0}"
       ]
      },
      "execution_count": 15,
